2007-01-22  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (vb_clicked): Put back the code that used to
	enforce the current view button;
	(switch_page_on_dnd): block and unblock button clicking during DnD.

2007-01-22  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_BaseModel.py: avoid rebuild on delete
	* src/PageView.py:  avoid rebuild on delete

2007-01-22  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditSource.py (query_response): Remove sourcerefs
	from repos (indirectly, through secondary objects).
	* src/Editors/_EditPlace.py (query_response): Avoid db walk.
	* src/DataViews/_FamilyList.py (remove): Set busy cursor.
	* src/DataViews/_PlaceView.py (remove): Set busy cursor.
	* src/DataViews/_SourceView.py (remove): Set busy cursor.
	* src/DataViews/_MediaView.py (remove): Set busy cursor.
	* src/DataViews/_EventView.py (remove): Set busy cursor.
	* src/DataViews/_RepositoryView.py (remove): Set busy cursor.
	* src/Editors/_EditEventRef.py (DelEventQuery): Remove unneeded class.
	* src/Filters/Rules/_HasTextMatchingSubstringOf.py: Remove
	unneeded import.
	* src/Filters/Rules/Person/_HasTextMatchingSubstringOf.py
	(cache_sources): Adapt to changes in get_source_referents.
	* src/Utils.py (get_source_referents): Use reference map, add
	repositories to the search results;
	(get_media_referents): Use reference map.

2007-01-22  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: 0000858: Patch for calendar
	  enhancements and new Birthday Report

2007-01-22  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py: Add function "get_address_str"
	* src/plugins/DetDescendantReport.py: Add addresses (0000791)
	* src/plugins/DetAncestralReport.py: Add addresses (0000791)
	* src/plugins/IndivComplete.py: Add addresses (0000791)
	* src/plugins/NarrativeWeb.py: use "get_address_str"
	* src/plugins/FamilyGroup.py: use "get_address_str"

2007-01-22  Don Allingham  <don@gramps-project.org>